infrastructure/openshift-ai/12-mcp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mcp-gateway
  namespace: test-jd
  labels:
    gateway.io/name: mcp-gateway
    istio: ingressgateway
    istio.io/rev: openshift-gateway
spec:
  gatewayClassName: data-science-gateway-class
  listeners:
  - name: mcp
    hostname: mcp-test-jd.apps.rosa.agentic-mcp.jolf.p3.openshiftapps.com
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: mcps
    hostname: "*.mcp.local"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
